[feat] GPT 방일 경우 GPT 응답 보내게 수정